--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "storybook:build": "storybook build"
   },
   "dependencies": {
+    "@excalidraw/excalidraw": "^0.17.5",
     "@mantine/core": "7.8.1",
     "@mantine/hooks": "7.8.1",
     "@next/bundle-analyzer": "^14.1.3",
