--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mantine-next-template",
+  "name": "excalidraw-locally",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -19,14 +19,14 @@
     "storybook:build": "storybook build"
   },
   "dependencies": {
-    "@excalidraw/excalidraw": "^0.17.5",
+    "@excalidraw/excalidraw": "^0.17.6",
     "@mantine/core": "7.8.1",
     "@mantine/hooks": "7.8.1",
     "@next/bundle-analyzer": "^14.1.3",
     "@tabler/icons-react": "^3.0.0",
     "next": "14.1.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
