--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@tabler/icons-react": "^3.0.0",
     "next": "14.1.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
