--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "analyze": "ANALYZE=true next build",
     "start": "next start",
     "typecheck": "tsc --noEmit",
-    "lint": "next lint && npm run lint:stylelint",
+    "lint": "eslint . --ext .ts,.tsx && npm run lint:stylelint",
     "lint:stylelint": "stylelint '**/*.css' --cache",
     "jest": "jest",
     "jest:watch": "jest --watch",
@@ -22,15 +22,15 @@
     "@excalidraw/excalidraw": "^0.17.6",
     "@mantine/core": "7.8.1",
     "@mantine/hooks": "7.8.1",
-    "@next/bundle-analyzer": "^14.1.3",
+    "@next/bundle-analyzer": "^16.1.1",
     "@tabler/icons-react": "^3.0.0",
-    "next": "14.1.3",
+    "next": "16.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
-    "@next/eslint-plugin-next": "^14.1.3",
+    "@next/eslint-plugin-next": "^16.1.1",
     "@storybook/addon-essentials": "^8.0.0",
     "@storybook/addon-styling-webpack": "^0.0.6",
     "@storybook/blocks": "^8.0.0",
